--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "devStart": "nodemon server.js"
+    "devStart": "nodemon index.js"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/GuiBlood1/login-node.git"
   },
-  "author": "",
+  "author": "Guilherme",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/GuiBlood1/login-node/issues"
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/GuiBlood1/login-node#readme",
   "dependencies": {
     "ejs": "^3.1.6",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node": "^15.10.0"
   },
   "devDependencies": {
     "dotenv": "^8.2.0",
